# FlagScent

./: .gitignore  FEATURES.md  README.md  pyproject.toml  requirements.txt  requirementsDefinition.md
flagscent/: __init__.py  analyzer.py  cli.py  dynamic_analyzer.py  heuristic.py  merger.py  models.py  r2_analyzer.py  scorer.py  static_analyzer.py  symbolic_analyzer.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_dynamic_analyzer.py  test_heuristic.py  test_models.py  test_scorer.py  test_static_analyzer.py
